@@ -8,7 +8,9 @@ import static org.mockito.Mockito.when;
 
 import java.util.Arrays;
 import java.util.HashMap;
-import java.util.LinkedList;
+import java.util.List;
+import java.util.Map;
+
 import org.datadog.jmxfetch.reporter.Reporter;
 import org.junit.Test;
 
@@ -24,13 +26,13 @@ public class TestServiceChecks extends TestCommon {
         initApplication("jmx.yaml");
 
         run();
-        LinkedList<HashMap<String, Object>> metrics = getMetrics();
+        List<Map<String, Object>> metrics = getMetrics();
 
         // Test that an OK service check status is sent
-        LinkedList<HashMap<String, Object>> serviceChecks = getServiceChecks();
+        List<Map<String, Object>> serviceChecks = getServiceChecks();
 
         assertEquals(1, serviceChecks.size());
-        HashMap<String, Object> sc = serviceChecks.getFirst();
+        Map<String, Object> sc = serviceChecks.get(0);
         assertNotNull(sc.get("name"));
         assertNotNull(sc.get("status"));
         assertNull(sc.get("message"));
@@ -64,12 +66,12 @@ public class TestServiceChecks extends TestCommon {
         run();
 
         // Test that an WARNING service check status is sent
-        LinkedList<HashMap<String, Object>> serviceChecks = getServiceChecks();
-        LinkedList<HashMap<String, Object>> metrics = getMetrics();
+        List<Map<String, Object>> serviceChecks = getServiceChecks();
+        List<Map<String, Object>> metrics = getMetrics();
         assertTrue(metrics.size() >= 350);
 
         assertEquals(1, serviceChecks.size());
-        HashMap<String, Object> sc = serviceChecks.getFirst();
+        Map<String, Object> sc = serviceChecks.get(0);
         assertNotNull(sc.get("name"));
         assertNotNull(sc.get("status"));
 
@@ -99,10 +101,10 @@ public class TestServiceChecks extends TestCommon {
         initApplication("non_running_process.yaml");
 
         // Test that a CRITICAL service check status is sent on initialization
-        LinkedList<HashMap<String, Object>> serviceChecks = getServiceChecks();
+        List<Map<String, Object>> serviceChecks = getServiceChecks();
         assertEquals(1, serviceChecks.size());
 
-        HashMap<String, Object> sc = serviceChecks.getFirst();
+        Map<String, Object> sc = serviceChecks.get(0);
         assertNotNull(sc.get("name"));
         assertNotNull(sc.get("status"));
         assertNotNull(sc.get("message"));
@@ -129,7 +131,7 @@ public class TestServiceChecks extends TestCommon {
         serviceChecks = getServiceChecks();
         assertEquals(1, serviceChecks.size());
 
-        sc = serviceChecks.getFirst();
+        sc = serviceChecks.get(0);
         assertNotNull(sc.get("name"));
         assertNotNull(sc.get("status"));
         assertNotNull(sc.get("message"));
